# scRNA-gut-clustering

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_gut_scrna_exploration.ipynb
src/: __init__.py  main.py
src/data/: __init__.py  loader.py  markers.py  simulator.py
src/models/: __init__.py  model_io.py  pipeline.py
src/utils/: __init__.py  config.py  logger.py
src/visualization/: __init__.py  plots.py
tests/: test_markers.py  test_model_io.py  test_pipeline.py  test_simulator.py
