[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scrna-gut-clustering"
version = "1.0.0"
description = "scRNA-seq gut mucosal cell clustering — PCA + UMAP + Leiden (Smillie 2019 marker genes)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Subhadip Jana", email = "subhadip@example.com" }]
keywords = ["scrna-seq", "gut", "microbiome", "clustering", "bioinformatics", "scanpy", "UMAP"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scanpy>=1.9",
    "anndata>=0.9",
    "umap-learn>=0.5",
    "leidenalg>=0.9",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "ruff>=0.1"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]

[project.scripts]
run-scrna-pipeline = "src.main:main"

[project.urls]
Homepage   = "https://github.com/SubhadipJana1409/day20-scrna-gut-clustering"
Repository = "https://github.com/SubhadipJana1409/day20-scrna-gut-clustering"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=src --cov-report=term-missing"
